Генерификация JMH-теста лексера